--- a/first-mockup/index.html
+++ b/first-mockup/index.html
@@ -14,15 +14,8 @@
     <title>TestTaskGoCows first mockup</title>
   </head>
   <body>
-    <div class="app">
-      <div class="pages-router">
-        <a href="index.html">First Mockup</a>
-        <a href="../second-mockup/index.html">Second Mockup</a>
-        <a href="../third-mockup/index.html">Third Mockup</a>
-        <a href="#top">Up</a>
-      </div>
-
-      <header id="top" class="section-header">
+    <div id="app" class="app">
+      <header class="section-header">
         <div class="section-header-logo">
           minimø
         </div>
@@ -195,17 +188,19 @@
             <div class="subtitle">
               Follow
             </div>
-            <ul class="social-icons">
+            <div class="social-icons">
               <a href="https://uk-ua.facebook.com/" target="_blank"><i class="fa-brands fa-facebook-f"></i></a>
               <a href="https://twitter.com/?lang=uk" target="_blank"><i class="fa-brands fa-twitter"></i></a>
               <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-            </ul>
+            </div>
           </div>
         </div>
       </footer>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+    <script src="../assets/scripts/libraries/jquery.min.js"></script>
+    <script src="../assets/scripts/router.js"></script>
     <script src="../assets/scripts/slider.js"></script>
     <script src="../assets/scripts/burger.js"></script>
   </body>
