--- a/second-mockup/index.html
+++ b/second-mockup/index.html
@@ -14,15 +14,8 @@
     <title>TestTaskGoCows second mockup</title>
   </head>
   <body>
-    <div class="app">
-      <div class="pages-router">
-        <a href="../first-mockup/index.html">First Mockup</a>
-        <a href="index.html">Second Mockup</a>
-        <a href="../third-mockup/index.html">Third Mockup</a>
-        <a href="#top">Up</a>
-      </div>
-
-      <header id="top" class="section-header">
+    <div id="app" class="app">
+      <header class="section-header">
         <div class="section-header-logo">
           minimø
         </div>
@@ -38,16 +31,16 @@
         <nav class="section-header-menu">
           <ul>
             <li>
-              <a href="#main-image">LIFESTYLE</a>
+              <a href="#promo">LIFESTYLE</a>
             </li>
             <li>
               <a href="#content">PHOTODIARY</a>
             </li>
             <li>
-              <a href="#yourLike">MUSIC</a>
+              <a href="#singUp">MUSIC</a>
             </li>
             <li>
-              <a href="#comments">TRAVEL</a>
+              <a href="#loadMore">TRAVEL</a>
             </li>
           </ul>
         </nav>
@@ -213,11 +206,11 @@
             <div class="subtitle">
               Follow
             </div>
-            <ul class="social-icons">
+            <div class="social-icons">
               <a href="https://uk-ua.facebook.com/" target="_blank"><i class="fa-brands fa-facebook-f"></i></a>
               <a href="https://twitter.com/?lang=uk" target="_blank"><i class="fa-brands fa-twitter"></i></a>
               <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-            </ul>
+            </div>
           </div>
         </div>
       </footer>
@@ -225,6 +218,8 @@
   </body>
 
   <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+  <script src="../assets/scripts/libraries/jquery.min.js"></script>
+  <script src="../assets/scripts/router.js"></script>
   <script src="../assets/scripts/slider.js"></script>
   <script src="../assets/scripts/burger.js"></script>
 </html>
