--- a/third-mockup/index.html
+++ b/third-mockup/index.html
@@ -31,16 +31,16 @@
         <nav class="section-header-menu">
           <ul>
             <li>
-              <a href="#promo">LIFESTYLE</a>
+              <a href="#comments">LIFESTYLE</a>
             </li>
             <li>
               <a href="#content">PHOTODIARY</a>
             </li>
             <li>
-              <a href="#singUp">MUSIC</a>
+              <a href="#content">MUSIC</a>
             </li>
             <li>
-              <a href="#loadMore">TRAVEL</a>
+              <a href="#yourLike">TRAVEL</a>
             </li>
           </ul>
         </nav>
